--- a/templates/.env
+++ b/templates/.env
@@ -1,3 +1,6 @@
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 S3_BUCKET_NAME=
+GOOGLE_ANALYTICS_SITE_ID=
+MAILCHIMP_API_KEY=
+MAILCHIMP_SPLASH_SIGNUP_LIST_ID=
