Splash page improvement - #2

--- a/templates/.env
+++ b/templates/.env
@@ -4,5 +4,5 @@ S3_BUCKET_NAME=
 GOOGLE_ANALYTICS_SITE_ID=
 MAILCHIMP_API_KEY=
 MAILCHIMP_SPLASH_SIGNUP_LIST_ID=
-HTTP_AUTH_NAME=
+HTTP_AUTH_USERNAME=
 HTTP_AUTH_PASSWORD=
