--- a/templates/.env
+++ b/templates/.env
@@ -6,3 +6,5 @@ MAILCHIMP_API_KEY=
 MAILCHIMP_SPLASH_SIGNUP_LIST_ID=
 HTTP_AUTH_USERNAME=
 HTTP_AUTH_PASSWORD=
+FACEBOOK_APP_ID=
+FACEBOOK_APP_SECRET=
