--- a/lib/generators/happy_seed/static_blog/templates/Gemfile
+++ b/lib/generators/happy_seed/static_blog/templates/Gemfile
@@ -6,7 +6,7 @@ gem "middleman", "~>3.3.7"
 gem "middleman-deploy"
 gem "middleman-blog", "~> 3.5.3"
 gem "middleman-blog-drafts"
-gem "middleman-meta-tags", github: "happyfuncode/middleman-meta-tags", branch: "develop"
+gem "middleman-autometatags"
 gem "middleman-livereload", "~> 3.1.0"
 gem 'middleman-bootstrap-navbar'
 
