--- a/website/Gemfile
+++ b/website/Gemfile
@@ -4,7 +4,7 @@ source 'https://rubygems.org'
 
 gem "middleman", "~>3.3.7"
 gem "middleman-deploy"
-gem "middleman-meta-tags", github: "happyfuncode/middleman-meta-tags", branch: "develop"
+gem "middleman-autometatags"
 gem "middleman-livereload", "~> 3.1.0"
 
 gem "bootstrap-sass"
@@ -18,3 +18,4 @@ gem "tzinfo-data", platforms: [:mswin, :mingw]
 
 gem "builder", "~> 3.0"
 
+gem "redcarpet"
