--- a/lib/generators/happy_seed/static/templates/Gemfile
+++ b/lib/generators/happy_seed/static/templates/Gemfile
@@ -2,11 +2,11 @@
 # the following line to use "http://" instead
 source 'https://rubygems.org'
 
-gem "middleman", "~>3.3.7"
+gem "middleman", "~>3.3"
 gem "middleman-deploy"
 gem "middleman-autometatags"
 gem "middleman-livereload", "~> 3.1.0"
-gem 'middleman-bootstrap-navbar'
+gem "bh"
 
 gem "bootstrap-sass"
 gem "jquery-middleman"
