switched to rspec

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 .bundle/
 log/*.log
 pkg/
-test/dummy/db/*.sqlite3
-test/dummy/db/*.sqlite3-journal
-test/dummy/log/*.log
-test/dummy/tmp/
-test/dummy/.sass-cache
+spec/dummy/db/*.sqlite3
+spec/dummy/db/*.sqlite3-journal
+spec/dummy/log/*.log
+spec/dummy/tmp/
+spec/examples.txt
+spec/dummy/.sass-cache
 .DS_Store
 test_app/
 lib/**/Gemfile.lock
